OOIION-1692 Wrap all ShortText's VALUES (which are almost all the field VALUES in the system).  I emphasize VALUES becuase this change does not alter the LABEL's. This specific fix was brought about because the URL's in an instrument's LOCATION more-info panel wwere going off the panel.

--- a/static/css/pepper.css
+++ b/static/css/pepper.css
@@ -2037,6 +2037,7 @@ a.btn-navigation-plain {
   color:#999;
   letter-spacing: 0px;
   color:#999;
+  word-wrap: break-word;
 }
 
 .tab-pane .row-fluid {
